fixed some spacing issues

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -157,10 +157,15 @@
     .profile{
         img{
             width:80%;
-            margin-top: 5%;
+            margin:15% auto;
         }
 
         flex-direction:column-reverse;
+    }
+
+    .socialIcons{
+        margin:15% auto;
+        width:80%;
     }
 
     .skillsIcons{
@@ -202,10 +207,16 @@
     .contact{
         .socialIcons{
             width:80%;
+            margin:15% auto;
+        }
+
+        p{
+            margin-top:10%;
         }
     }
 
     footer{
+        margin:75px 0;
         h4{
             font-size:1rem;
         }
